Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11895,3 +11895,20 @@
     volume = {37},
     publisher = {Wiley Online Library}
 }
+
+@inproceedings{Nagai2013,
+    title = {{Scaling up Size and Number of Expressions in Random Testing of Arithmetic Optimization of C Compilers}},
+    year = {2013},
+    booktitle = {SASIMI},
+    author = {Nagai, E. and Hashimoto, A. and Ishiura, N.}
+}
+
+@article{Chen2003,
+    title = {{Fault-based testing without the need of oracles}},
+    year = {2003},
+    journal = {Information and Software Technology},
+    author = {Chen, T. Y. and Tse, T. H. and Zhou, Z.},
+    number = {1},
+    volume = {45},
+    keywords = {Fault-based testing, Metamorphic testing, Oracle problem, Symbolic execution}
+}
