--- a/preamble.tex
+++ b/preamble.tex
@@ -117,6 +117,7 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 \lstdefinelanguage[OpenCL]{C}[ANSI]{C}
 {morekeywords={__kernel,kernel,__local,local,__global,global,%
     __constant,constant,__private,private,%
+    __read_only,read_only,__write_only,write_only,%
     char2,char3,char4,char8,char16,%
     uchar2,uchar3,uchar4,uchar8,uchar16,%
     short2,short3,short4,short8,short16,%
@@ -130,7 +131,7 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
     bool2,bool3,bool4,bool8,bool16,%
     half2,half3,half4,half8,half16,%
     quad,quad2,quad3,quad4,quad8,quad16,%
-    complex,imaginary},%
+    complex,imaginary,barrier},%
 }%
 %
 %% Pseudo-code listings.
