--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -8,7 +8,7 @@
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
   \caption{%
-    OpenCL testbeds, the time spent in automated testing, and the number of bug reports submitted to date.%
+    OpenCL testbeds, the time spent in automated testing, and the number of bug reports submitted to date. \cc{refresh!}%
   }
   \label{tab:platforms}
 \end{table*}
