--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -422,13 +422,13 @@ We found numerous cases where kernels trigger a crash in the compiler (and as a 
       \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelGtDoubleAssertion}}}%
       \label{lst:intel-gt2-double-assertion}
     }\\%
-  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.]{%
-    \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
-    \label{lst:almost-everything-crash}
-  }\\%
   \subfloat[Testbeds $1\pm$ segmentation fault.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\NvidiaCompileSegfault}}}%
     \label{lst:nvidia-compile-segfault}
+  }\\%
+  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
+    \label{lst:almost-everything-crash}
   }\\%
   \subfloat[Testbeds $7\pm$ segmentation fault.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiSegfault}}}%
@@ -513,7 +513,7 @@ Table~\ref{tab:clangs} shows whether each of 7 distinct assertions were raised. 
   \centering %
   \input{build/tab/clang-asserts}
   \caption{%
-    Distinct Clang front-end assertions, and the number of distinct unreachables.%
+    Distinct Clang front-end assertions triggered by DeepSmith, and the number of distinct unreachables.%
   }
   \label{tab:clangs}
 \end{table}
@@ -525,7 +525,7 @@ EMI/CSmith/SPE extensive stress-test.
 
 \begin{figure}
   \centering %
-  \subfloat[Testbeds $4+$, $6+$ incorrectly execute \texttt{if} branch. This pattern of integer comparison to thread ID is widely used.]{%
+  \subfloat[Testbeds $4+$, $6+$ incorrectly optimize the \texttt{if} statement, causing the conditional branch to execute (it shouldn't). This pattern of integer comparison to thread ID is widely used.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelSizetIntUnreduced}}}%
     \label{lst:intel-size_t-int-unreduced}
   }\\%
@@ -541,10 +541,10 @@ EMI/CSmith/SPE extensive stress-test.
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\PoclUndefinedSymbols}}}%
     \label{lst:pocl-undefined-symbols}
   }\\%
-  \subfloat[Testbeds $3\pm$ incorrect cast yields \texttt{b[e] = 127}, not \texttt{b[e] = 0}. \cc{TODO: Is char overflow defined?}]{%
-    \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetCastError}}}%
-    \label{lst:beignet-cast-error}
-  }\\%
+%  \subfloat[Testbeds $3\pm$ incorrect cast yields \texttt{b[e] = 127}, not \texttt{b[e] = 0}. \cc{TODO: Is char overflow defined?}]{%
+%    \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetCastError}}}%
+%    \label{lst:beignet-cast-error}
+%  }\\%
   \caption{Example kernels which are miscompiled.}%
   \label{lst:wrong-code}%
 \end{figure}
@@ -616,7 +616,7 @@ We ran each program generator using its default configuration for 48 hours on ea
   \centering %
   \input{build/tab/megatable}
   \caption{%
-    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\textbf{bc}), build timeout (\textbf{bto}), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and pass (\textbf{\cmark}) results. \cc{no need for ``Total'' row}%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\textbf{bc}), build timeout (\textbf{bto}), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and pass (\textbf{\cmark}) results. \cc{remove ``Total'' row for submission}%
   }
   \label{tab:megatable}
 \end{table*}
@@ -749,8 +749,8 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
   \centering %
   \includegraphics[width=.9\columnwidth]{build/img/runtimes}%
   \caption{%
-    Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $3.46\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
-%    Total speedup is 3.46x
+    Runtimes, excluding timeouts. DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith on average ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
+%    Total speedup is 3.03x
 %    CLgen generation is 2.45x faster than CLSmith
 %    CLgen execution is 4.46x faster than CLSmith
 %    CLgen reduction is 66.54x faster than CLSmith
