Update on Overleaf.

--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:rw}
 
 \paragraph{Test Case Generation} 
-Testing how compilers work under valid and invalid input is The need to test compilers under invalid and unexpected input conditions has been long known~\cite{Boujarwah1997}.
+Testing how compilers operate under valid and invalid input is an established practice, The need to test compilers under invalid and unexpected input conditions has been long known~\cite{Boujarwah1997}.
 
 Differential testing using test cases of ranked ``quality'' is presented in~\cite{McKeeman1998}. A lexeme generator and to test C compilers by enumerating token sequences. Similar to DeepSmith, except we weight the generation so that sequences are plausible.
 
