--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -737,17 +737,7 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 
 \begin{figure}
   \centering %
-  \includegraphics[width=.9\columnwidth]{build/img/kernel-sizes}%
-  \caption{%
-    Kernel sizes, grouped by outcome. DeepSmith kernels are on average two orders of magnitude smaller than CLSmith. \cc{TODO: group by classification}%
-  }%
-  \label{fig:kernel-sizes} %
-\end{figure}
-
-
-\begin{figure}
-  \centering %
-  \includegraphics[width=.9\columnwidth]{build/img/runtimes}%
+  \includegraphics[width=\columnwidth]{build/img/vs-clsmith}%
   \caption{%
     Runtimes, excluding timeouts. DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith on average ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
 %    Total speedup is 3.03x
