Update on Overleaf.

--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:rw}
 
 \paragraph{Test Case Generation} 
-Testing how compilers operate under valid and invalid input is an established practice, aiming at uncovering early bugs in the compiler. The need to test compilers under invalid and unexpected input conditions has been long known~\cite{Boujarwah1997}.
+Testing how compilers operate under unexpected or invalid input is an established practice, aiming at uncovering bugs in the compiler~\cite{Boujarwah1997}. The main question is of how to generate code 
 
 Differential testing using test cases of ranked ``quality'' is presented in~\cite{McKeeman1998}. A lexeme generator and to test C compilers by enumerating token sequences. Similar to DeepSmith, except we weight the generation so that sequences are plausible.
 
