--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -738,6 +738,7 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 \begin{figure}
   \centering %
   \includegraphics[width=\columnwidth]{build/img/vs-clsmith}%
+  \vspace{-1em}
   \caption{%
     Comparison of (a) runtimes and (b) test case sizes.
     % Runtimes, excluding timeouts. DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith on average ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
