Update on Overleaf.

--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:rw}
 
 \paragraph{Test Case Generation} 
-Testing how compilers operate under unexpected or invalid input is an established practice, aiming at uncovering bugs in the compiler~\cite{Boujarwah1997}. The main question is of how to efficiently generate code for triggering such bugs. In~\cite{McKeeman1998}, the author generated test cases of ranked ``quality''. A lexeme generator and to test C compilers by enumerating token sequences. Similar to DeepSmith, except we weight the generation so that sequences are plausible.
+Testing how compilers operate under unexpected or invalid input is an established practice, aiming at uncovering bugs in the compiler~\cite{Boujarwah1997}. The main question is of how to efficiently generate code for triggering such bugs. In one of the first works ~\cite{McKeeman1998}, the author designed a lexeme generator to create test cases of ranked ``quality''. A lexeme generator and to test C compilers by enumerating token sequences. Similar to DeepSmith, except we weight the generation so that sequences are plausible.
 
 Increasing complexity of generations: RandProg to CSmith. Then EMI testing, and SPE.
 
