Update on Overleaf.

--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:rw}
 
 \paragraph{Test Case Generation} 
-Testing how compilers operate under unexpected or invalid input is an established practice, aiming at uncovering bugs in the compiler~\cite{Boujarwah1997}. The main question is of how to efficiently generate code for triggering such bugs. In~\cite{McKeeman1998}, the author designed a lexeme generator to create test cases of ranked ``quality''. This introduced the idea of automatic test case generators. 
+Testing how compilers operate under unexpected or invalid input is an established practice, aiming at uncovering bugs in the compiler~\cite{Boujarwah1997}. The main question is of how to efficiently generate code for triggering such bugs. In~\cite{McKeeman1998}, the author designed a lexeme generator to create test cases of ranked ``quality''. This introduced the idea of automatic test case generators. RandProg
 
 Increasing complexity of generations: RandProg to CSmith. Then EMI testing, and SPE.
 
