--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -740,8 +740,8 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
   \includegraphics[width=\columnwidth]{build/img/vs-clsmith}%
   \vspace{-1em}
   \caption{%
-    Comparison of (a) runtimes and (b) test case sizes.
-    % Runtimes, excluding timeouts. DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith on average ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
+    Comparison of (a) runtimes and (b) test case sizes. DeepSmith test cases are on average evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively), and are two orders of magnitude smaller.
+    % Runtimes, excluding timeouts. .%
 %    Total speedup is 3.03x
 %    CLgen generation is 2.45x faster than CLSmith
 %    CLgen execution is 4.46x faster than CLSmith
