Update on Overleaf.

--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -6,7 +6,7 @@
 %\hl{Hugh comment}
 
 \noindent
-Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs; tixed test suites are inadequate for ensuring correct behavior over the broad range of possible inputs.
+Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs; fixed test suites are inadequate for ensuring correct behavior over the broad range of possible inputs. \am{It's not just broad, it's infinite, though I don't know if the distinction matters for the paper.}-
 
 Random test case generation --- \emph{fuzzing} --- is an effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
 
